# panda_robot_narva

./: .gitignore
src/panda_description/: CMakeLists.txt
src/panda_description/launch/: panda_gazebo.launch.py  panda_gazebo_with_obstacles.launch.py  view.launch.py
src/panda_moveit_config/: .setup_assistant  package.xml
src/panda_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  panda.ros2_control.xacro  panda.srdf  ros2_controllers.yaml
src/panda_moveit_control/: CMakeLists.txt  package.xml
src/panda_moveit_control/launch/: joint_space_planning.launch.py
src/panda_moveit_control/src/: joint_space_planning.cpp
